# marimo-test

./: README.md  pyproject.toml
src/marimo_test/: fifa.py  firstmarimo.py
